--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -857,9 +857,9 @@ span.performanceScore {
     flex: none;
     flex-direction: column;
     position: absolute;
-    top: -421%;
-    left: -205%;
-    width: 4.5em;
+    top: -480%;
+    left: 60%;
+    width: 6em;
     max-height: 6em;
     overflow-y: auto;
     overflow-x: hidden;
@@ -1074,7 +1074,7 @@ span.performanceScore {
     display: flex;
     flex: none;
     justify-content: center;
-    margin-top: .1em;
+    /*margin-top: .1em;*/
 }
 
 .costButton button {
@@ -1266,6 +1266,10 @@ span.performanceScore {
 .newTitleDt{
   font-size: 12px;
   display: block !important;
+}
+
+.newTitleDt p{
+  font-size: 12px;
 }
 
 .newTitle label{
