--- a/src/components/Charts/charts.module.css
+++ b/src/components/Charts/charts.module.css
@@ -189,3 +189,10 @@
 .metricSwitch button{
     margin-left: 0 !important;
 }
+
+.restore{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    cursor: pointer;
+}
