增加简单视图可解释性的辅助信息 图

--- a/src/components/Train/Result/styles.module.css
+++ b/src/components/Train/Result/styles.module.css
@@ -675,3 +675,9 @@ span.ccellHeaderSpan{
   flex: auto;
   justify-content: space-around;
 }
+
+.dfn{
+  font-style:normal;
+  font-size: 14px;
+  width: 100%;
+}
