--- a/src/components/Modeling/Result/AdvancedView/DetailCurves.module.css
+++ b/src/components/Modeling/Result/AdvancedView/DetailCurves.module.css
@@ -84,7 +84,8 @@
   .predictTable span{
     overflow: auto;
     display: -webkit-box;
-     max-height: 100px;
+    max-height: 100px;
+    word-break: break-word;
   }
   .detailCurves .leftPanel .predictTable :global(.ant-table-tbody) :global(.ant-table-row):first-child td:nth-of-type(1),
   .detailCurves .leftPanel .predictTable :global(.ant-table-tbody) :global(.ant-table-row):nth-of-type(2) td:nth-of-type(1) {
