--- a/src/components/Modeling/Result/UnSupervised/styles.module.css
+++ b/src/components/Modeling/Result/UnSupervised/styles.module.css
@@ -682,6 +682,19 @@ span.ccellHeaderSpan{
   font-style:normal;
   font-size: 14px;
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  overflow: auto;
+  height: 40px;
+  align-items: center;
+  line-height: 1.7;
+}
+
+.dfn a {
+  max-width: 170px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .disabled {
