--- a/src/components/Modeling/Result/UnSupervised/DisplayOutlier.module.css
+++ b/src/components/Modeling/Result/UnSupervised/DisplayOutlier.module.css
@@ -56,3 +56,13 @@
   align-items: center;
   justify-content: center;
 }
+
+.none span {
+  font-size: 1rem;
+  overflow: hidden;
+  padding: 0.5em 0;
+  white-space: nowrap;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  width: 100%;
+}
