--- a/src/components/CreateNewVariable/FuncTips.module.css
+++ b/src/components/CreateNewVariable/FuncTips.module.css
@@ -1,7 +1,9 @@
 
 .funcTips {
   padding: 0.5rem 0;
-  font-family: 'HelveticaNeue', Arial, Helvetica, sans-serif;
+  font-Family:
+    -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+
 }
 
 .funcTipsName {
