--- a/src/components/Data/Quality/styles.module.css
+++ b/src/components/Data/Quality/styles.module.css
@@ -77,6 +77,7 @@
 	flex: none;
 	align-items: center;
 	z-index: 1;
+	min-height: 35px;
 }
 
 .type {
@@ -509,12 +510,14 @@
 .fixesRow {
 	display: flex;
 	flex: none;
-	padding: 0 0.1em;
+	padding: 0 0.1em 0 0.25em;
+	position: relative;
+	align-items: center;
 }
 
 .fixesHeader {
 	border-bottom: solid 1px #c4cbd7;
-	margin-right: 0.15em;
+	padding-right: 0.25em;
 }
 
 .fixesCell {
@@ -1373,4 +1376,37 @@ button.activeButton span {
 	color: #4a4a4a;
 	line-height: 1.2;
 	cursor: pointer;
+}
+
+.fixedCheck {
+	display: flex;
+	flex: none;
+	position: absolute;
+	width: 0.25em;
+	justify-content: center;
+	left: 0;
+}
+
+.fixedCheck input[type='checkbox'] {
+	cursor: pointer;
+}
+
+span.reset {
+	color: #1890ff;
+	cursor: pointer;
+	margin-left: auto;
+}
+
+.batch {
+	display: flex;
+	flex: none;
+}
+
+.batchSelect {
+	margin-right: 20px;
+	width: 160px;
+}
+
+.batchSelect :global(.ant-select-selection__placeholder) {
+	color: #000
 }
