--- a/src/index.css
+++ b/src/index.css
@@ -123,3 +123,16 @@ body {
 .ant-popover-title{
   border-bottom: 0 !important;
 }
+
+
+.katex-html{
+  display: flex !important;
+  margin:30px 0;
+}
+
+.katex-html >:nth-child(3){
+  /*display: none;*/
+  /*color:red;*/
+  overflow: auto;
+  max-height: 300px;
+}
