fix database download bug

--- a/src/components/Detail/Status/list.module.css
+++ b/src/components/Detail/Status/list.module.css
@@ -175,7 +175,7 @@
   color: #c4cbd7;
   margin-top: 1.5rem;
 }
-.results {
+.list .list .results {
   text-decoration: underline;
   cursor: pointer;
 }
