--- a/src/components/Data/Schema/styles.module.css
+++ b/src/components/Data/Schema/styles.module.css
@@ -58,6 +58,7 @@
     background-color: #f1f4f6;
     border: solid 1px #cacfd7;
     margin-bottom: -1px;
+    line-height: 34px;
 }
 
 .schemaSelect {
@@ -69,7 +70,7 @@
     background-image: linear-gradient(to bottom, #5b657b, #243448);
     color: #fff;
     padding: 0 0.2em;
-    margin-left: 0.4em;
+    /* margin-left: 0.4em; */
     cursor: pointer;
 }
 
@@ -212,7 +213,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 0.2em;
+    margin: 0 0.1em;
 }
 
 .schemaMissed span {
@@ -248,4 +249,8 @@
 
 .target {
     background-color: #daefe4;
+}
+
+.isAssociation {
+    margin-left: 0
 }
