--- a/src/components/Modeling/Result/Association/Association.module.css
+++ b/src/components/Modeling/Result/Association/Association.module.css
@@ -62,6 +62,22 @@
 .result {
   display: flex;
   flex: auto;
+  flex-direction: column;
+  width: 0;
+  padding: 15px 0;
+  overflow-y: auto;
+  border: 1px solid #C4CBD7;
+}
+
+.row {
+  display: flex;
+  flex: none;
+  margin: 0 25px;
+}
+
+.row span {
+  font-size: 1rem;
+  line-height: 2;
 }
 
 .views {
@@ -69,18 +85,73 @@
   flex: auto;
   position: relative;
   overflow-x: visible;
+  width: 0;
 }
 
 .view {
   display: flex;
   flex: none;
   position: relative;
-    left: calc(50% - 80px);
-    background: blue;
-    width: 100%;
+  left: calc(50% - 80px);
+  width: calc(150% + 80px);
 }
 
 .empty {
   display: flex;
   flex: auto;
+  width: 0;
+  height: 0;
+}
+
+
+.options {
+  display: flex;
+  flex: auto;
+  flex-direction: column;
+  margin-top: 50px;
+  box-shadow:0px 5px 10px 0px rgba(0,0,0,0.3);
+  position: relative;
+}
+
+.tabs {
+  position: absolute;
+  display: flex;
+  left: 0;
+  right: 0;
+  top: -50px;
+  bottom: 100%;
+  z-index: 1;
+}
+
+.tab {
+  display: flex;
+  flex: 0 1 186px;
+  justify-content: center;
+  align-items: center;
+  width: 186px;
+  background:linear-gradient(180deg,rgba(255,255,255,1) 0%,rgba(241,243,245,1) 100%);
+  box-shadow:0px 5px 10px 0px rgba(0,0,0,0.3);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border-top: 5px solid rgb(255,255,255);
+  z-index: 1;
+  cursor: pointer;
+}
+
+.tab span {
+  font-size: 1.25rem;
+  line-height: 1.2;
+}
+
+.tab.active {
+  background: #fff;
+  border-top-color: #000;
+  z-index: 2;
+}
+
+.chart {
+  display: flex;
+  flex: auto;
+  z-index: 2;
+  background: #fff
 }
