--- a/src/components/Modeling/Start/Association/Association.module.css
+++ b/src/components/Modeling/Start/Association/Association.module.css
@@ -13,6 +13,8 @@
   margin: 100px 20px 40px 30px;
   box-shadow:0px 5px 10px 0px rgba(0,0,0,0.3);
   position: relative;
+  min-height: 640px;
+  overflow-y: auto;
 }
 
 .tabs {
@@ -124,6 +126,8 @@
   margin: 100px 30px 40px 10px;
   box-shadow:0px 5px 10px 0px rgba(0,0,0,0.3);
   padding: 35px 40px;
+  min-height: 640px;
+  overflow-y: auto;
 }
 
 .title {
