fix schema  && fix target

--- a/src/components/Modeling/Result/Association/Association.module.css
+++ b/src/components/Modeling/Result/Association/Association.module.css
@@ -87,6 +87,11 @@
   position: relative;
   overflow-x: visible;
   width: 0;
+  transition: opacity .5s;
+}
+
+.viewsHidden {
+  opacity: 0;
 }
 
 .view {
