--- a/src/components/Modeling/Start/Association/Association.module.css
+++ b/src/components/Modeling/Start/Association/Association.module.css
@@ -72,10 +72,14 @@
   display: flex;
   flex: 1 1 0;
   width: 0;
+  margin-right: 10px;
 }
 
 .label label {
   font-size: 1rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .label i {
@@ -126,6 +130,7 @@
   box-shadow:0px 5px 10px 0px rgba(0,0,0,0.3);
   padding: 35px 40px;
   min-height: 640px;
+  min-width: 400px;
 }
 
 .title {
