多分类-a table done

--- a/src/components/Modeling/Result/AdvancedView/AdvancedView.module.css
+++ b/src/components/Modeling/Result/AdvancedView/AdvancedView.module.css
@@ -52,7 +52,14 @@
 }
 
 .mytable{
-  margin-top: 30px;
+  margin: 30px 10%;
+  display: flex;
+}
+.mytable >:first-child{
+  writing-mode: vertical-lr;
+  height: fit-content;
+  padding-right: 10px;
+  padding-top: 60px;
 }
 
 .mytable strong{
