--- a/src/components/Modeling/Result/Association/Association.module.css
+++ b/src/components/Modeling/Result/Association/Association.module.css
@@ -163,3 +163,10 @@
   background: #fff;
   overflow: auto;
 }
+
+.disabled {
+  cursor: not-allowed;
+  background-color: #d3d3d3;
+  color: #aaaaaa;
+  background-image: none;
+}
