--- a/src/components/Detail/Status/list.module.css
+++ b/src/components/Detail/Status/list.module.css
@@ -2,7 +2,8 @@
   padding: 0.2em 0.6em;
   display: flex;
   flex-direction: column;
-  flex: 1;
+  flex: 1 1;
+  min-width: 0;
 }
 .list {
   flex: 1 1 0;
