--- a/src/components/Modeling/Result/UnSupervised/styles.module.css
+++ b/src/components/Modeling/Result/UnSupervised/styles.module.css
@@ -286,6 +286,7 @@
 .tabs {
   border-bottom: 1px #1D2B3C solid;
   display: flex;
+  flex: none;
   /* justify-content: flex-end; */
   margin-bottom: 40px
 }
