--- a/src/components/Modeling/Result/UnSupervised/styles.module.css
+++ b/src/components/Modeling/Result/UnSupervised/styles.module.css
@@ -642,13 +642,13 @@
   flex: none;
 }
 
-button.disable {
+/* button.disable {
   cursor: not-allowed;
   background-color: #d3d3d3;
   color: #aaaaaa;
   background-image: none;
   border-color: transparent;
-}
+} */
 
 .mapCell {
   display: flex;
